syntax = "proto3";

option go_package = "github.com/omaqase/sato/catalogue/pkg/api/v1/catalogue;protobuf";

package api.v1.catalogue;

// Category

message CreateCategoryRequest {
  string title = 1;
  string slug = 2;
}

message CreateCategoryResponse {
  string id = 1;
  string title = 2;
  string slug = 3;
  string created_at = 4;
}

message UpdateCategoryRequest {
  string category_id = 1;
  optional string title = 2;
  optional string slug = 3;
}

message UpdateCategoryResponse {
  string category_id = 1;
  string title = 2;
  string slug = 3;
  string updated_at = 4;
}

message GetCategoryByIDRequest {
  string category_id = 1;
}

message GetCategoryByIDResponse {
  string category_id = 1;
  string title = 2;
  string slug = 3;
  string created_at = 4;
  string updated_at = 5;
}

message GetCategoryBySlugRequest {
  string slug = 1;
}

message GetCategoryBySlugResponse {
  string category_id = 1;
  string title = 2;
  string slug = 3;
  string created_at = 4;
  string updated_at = 5;
}

message ListCategoryRequest {
  int32 limit = 1;
  int32 offset = 2;
}

message ListCategoryItem {
  string category_id = 1;
  string title = 2;
  string slug = 3;
  string created_at = 4;
  string updated_at = 5;
}

message ListCategoryResponse {
  repeated ListCategoryItem categories = 1;
}

message DeleteCategoryByIDRequest {
  string category_id = 1;
}

message DeleteCategoryByIDResponse {
  int32 status = 1;
}

message DeleteCategoryBySlugRequest {
  string slug = 1;
}

message DeleteCategoryBySlugResponse {
  int32 status = 1;
}

// Product

message CreateProductRequest {
  string title = 1;
  string slug = 2;
  string category_id = 3;
  int32 stock = 4;
}

message CreateProductResponse {
  string product_id = 1;
  string category_id = 2;
  string seller_id = 3;
  string title = 4;
  int32 stock = 5;
  float rating = 6;
  string approve_status = 7;
  string created_at = 8;
}

message UpdateProductRequest {
  string product_id = 1;
  optional string title = 2;
  optional int32 stock = 3;
}

message UpdateProductResponse {
  string product_id = 1;
  string category_id = 2;
  string seller_id = 3;
  string title = 4;
  int32 stock = 5;
  float rating = 6;
  bool approved = 7;
  string updated_at = 8;
}

message GetProductByIDRequest {
  string product_id = 1;
}

message GetProductByIDResponse {
  string product_id = 1;
  string category_id = 2;
  string seller_id = 3;
  string title = 4;
  int32 stock = 5;
  float rating = 6;
  bool approved = 7;
  string created_at = 8;
  string updated_at = 9;
}

message ListProductRequest {
  int32 limit = 1;
  int32 offset = 2;
}

message ListProductItem {
  string product_id = 1;
  string category_id = 2;
  string seller_id = 3;
  string title = 4;
  int32 stock = 5;
  float rating = 6;
  bool approved = 7;
  string created_at = 8;
  string updated_at = 9;
}

message ListProductResponse {
  repeated ListProductItem products = 1;
}

message DeleteProductRequest {
  string product_id = 1;
}

message DeleteProductResponse {
  int32 status = 1;
}

message GetCategoryAncestorsRequest {
  string category_id = 1;
}

message GetCategoryAncestorsItem {
  string category_id = 1;
  string title = 2;
  string slug = 3;
  string created_at = 4;
  string updated_at = 5;
}

message GetCategoryAncestorsResponse {
  repeated GetCategoryAncestorsItem ancestors = 1;
}

message GetCategoryDescendantsRequest {
  string category_id = 1;
}

message GetCategoryDescendantsItem {
  string category_id = 1;
  string title = 2;
  string slug = 3;
  string created_at = 4;
  string updated_at = 5;
}
message GetCategoryDescendantsResponse {
  repeated GetCategoryDescendantsItem descendants = 1;
}

message AddCategoryHierarchyRequest {
  string ancestor_id = 1;
  string descendant_id = 2;
  int32 depth = 3;
}

message AddCategoryHierarchyResponse {
  bool success = 1;
}

message GetProductBySlugRequest {
  string slug = 1;
}

message GetProductBySlugResponse {
  string product_id = 1;
  string category_id = 2;
  string seller_id = 3;
  string title = 4;
  int32 stock = 5;
  float rating = 6;
  bool approved = 7;
  string created_at = 8;
  string updated_at = 9;
}

message AddToFavoritesRequest {
    string user_id = 1;
    string product_id = 2;
}

message AddToFavoritesResponse {}

message RemoveFromFavoritesRequest {
    string user_id = 1;
    string product_id = 2;
}

message RemoveFromFavoritesResponse {}

message GetUserFavoritesRequest {
    string user_id = 1;
    int32 limit = 2;
    int32 offset = 3;
}

message GetUserFavoritesResponse {
    repeated string product_ids = 1;
}