syntax = "proto3";

option go_package = "github.com/omaqase/sato/product/pkg/api/v1/product;protobuf";
package api.v1.product;

import "product_messages.proto";
import "google/api/annotations.proto";

// ProductService provides CRUD operations for product management.
service ProductService {
  // Creating a new product.
  rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse) {
    option (google.api.http) = {
      post: "/admin/api/v1/products"
      body: "*"
    };
  }

  // Retrieve the product by ID.
  rpc GetProductById(GetProductByIdRequest) returns (GetProductByIdResponse) {
    option (google.api.http) = {
      get: "/api/v1/products/{id}"
    };
  }

  // Upgrade an existing product.
  rpc UpdateProduct(UpdateProductRequest) returns (UpdateProductResponse) {
    option (google.api.http) = {
      patch: "/admin/api/v1/products/{id}"
      body: "*"
    };
  }

  // Deleting a product by ID.
  rpc DeleteProduct(DeleteProductRequest) returns (DeleteProductResponse) {
    option (google.api.http) = {
      delete: "/admin/api/v1/products/{id}"
    };
  }

  // Get a list of all products.
  rpc ListProducts(ListProductsRequest) returns (ListProductsResponse) {
    option (google.api.http) = {
      get: "/api/v1/products"
    };
  }
}